<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.meerkat.frapieye.MainActivity">

    <br.com.meerkat.frapieye.SurfaceOverlay
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/surfaceOverlayView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


    <br.com.meerkat.frapieye.CameraPreviewSurface
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/surfaceView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


    <FrameLayout
        android:id="@+id/resultScreen"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:padding="10dp"
        android:background="#f1efe3"
        android:visibility="gone">

        <ImageView
            android:id="@+id/resultFace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </FrameLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:background="#55000000"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/meerkatButton"
            android:src="@drawable/ic_meerkat_m_logo"
            android:scaleType="fitStart"
            android:background="@null"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/inputButton"
            android:src="@drawable/ic_input"
            android:scaleType="fitStart"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:layout_marginTop="4dp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/changeCamButton"
            android:src="@drawable/ic_flip_camera"
            android:scaleType="fitStart"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"/>


    </RelativeLayout>



    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="250dip"
        android:layout_height="320dip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dip"
        android:layout_above="@+id/relativeLayout"
        android:background="@drawable/layout_rounded_bg"
        android:id="@+id/relativeLayoutAbout"
        android:weightSum="1">


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:scaleType="fitStart"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/closeWindowButton"
            android:background="@null"
            android:src="@drawable/close_window"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="250dip"
            android:layout_marginTop="50dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/relativeLayout"
            android:id="@+id/linearLayout"
            android:weightSum="1">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/meerkat_logo_blue"
                />

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#555555"
                android:text="@string/app_name_version"
                android:id="@+id/appNameVersionText"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#555555"
                android:text="@string/txtCredits"
                android:id="@+id/aboutTextView"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/pnlFlash"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/splashScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:background="#091b2b">
        <br.com.meerkat.frapieye.ScalableImageView android:id="@+id/asplashScreen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:background="@drawable/meerkat_logo_white"/>
    </RelativeLayout>





    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="250dip"
        android:layout_height="300dip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dip"
        android:layout_above="@+id/relativeLayout"
        android:background="@drawable/layout_rounded_bg"
        android:id="@+id/relativeLayoutInput"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_alignParentTop="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_ip" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_port" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </RelativeLayout>




</RelativeLayout>
